<resources>
    <string name="app_name">Mobile Explorer</string>
    <string name="btn_connect">Connect</string>
    <string name="lbl_app_title">Mobile Explorer</string>
    <string name="lbl_enter_name">Enter your name:</string>
    <string name="connect">Connect</string>
    <string name="searching">Searching</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_map">Map</string>
    <string name="tab_text_2">Main</string>
    <string name="tab_text_3">Chat</string>
    <string name="tab_text_4">Gallery</string>
    <string name="btn_follow">follow</string>
    <string name="btn_flag">flag</string>
    <string name="btn_take_photo">Take Photo</string>
    <string name="btn_choose_gallery">Choose From Gallery</string>
    <string name="btn_choose_folder">Choose From Folder</string>
    <string name="btn_close_transfer">Close</string>
    <string name="btn_send_files">Send a File</string>
    <string name="title_activity_settings">Settings</string>
    <string name="lbl_heartrate_setting_time">Heartrate alarming time change</string>
    <string name="lbl_heartrate_setting_value">Heartrate alarming value change</string>
    <string name="lbl_pressure_setting_time">Pressure alarming time change</string>
    <string name="lbl_pressure_setting_value">Pressure alarming value change</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="exit_without_saving">Exit without saving</string>
    <string name="enter_message_hint">Enter Message</string>
    <string name="send_message">Send</string>
    <string name="hello_blank_fragment">blank fragment</string>
</resources>