<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendFilesActivity">

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:text="@string/btn_take_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnChooseGallery"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:text="@string/btn_choose_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTakePhoto" />

    <Button
        android:id="@+id/btnChooseFolder"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:text="@string/btn_choose_folder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseGallery" />

    <Button
        android:id="@+id/btnCloseTransfer"
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:layout_marginTop="70dp"
        android:text="@string/btn_close_transfer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChooseFolder" />
</androidx.constraintlayout.widget.ConstraintLayout>