<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/lblAlarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/lbl_heartrate_setting_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblSettingsTitle" />

    <TextView
        android:id="@+id/lblAlarmValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/lbl_heartrate_setting_value"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAlarmTime" />

    <EditText
        android:id="@+id/txtAlarmTime"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/lblAlarmTime"
        app:layout_constraintTop_toBottomOf="@+id/lblSettingsTitle" />

    <EditText
        android:id="@+id/txtAlarmValue"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/lblAlarmValue"
        app:layout_constraintTop_toBottomOf="@+id/txtAlarmTime" />

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="400dp"
        android:text="@string/save_and_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnExitSettings"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/exit_without_saving"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSaveSettings" />

    <TextView
        android:id="@+id/lblSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/title_activity_settings"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblPressureTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/lbl_pressure_setting_time"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblAlarmValue" />

    <TextView
        android:id="@+id/lblPressureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:text="@string/lbl_pressure_setting_value"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPressureTime" />

    <EditText
        android:id="@+id/txtPressureTime"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/lblPressureTime"
        app:layout_constraintTop_toBottomOf="@+id/txtAlarmValue" />

    <EditText
        android:id="@+id/txtPressureValue"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/lblPressureValue"
        app:layout_constraintTop_toBottomOf="@+id/txtPressureTime" />

</androidx.constraintlayout.widget.ConstraintLayout>